--- a/taxi-ui/src/app/components/rider-dashboard/rider-dashboard.component.html
+++ b/taxi-ui/src/app/components/rider-dashboard/rider-dashboard.component.html
@@ -1,21 +1,56 @@
-<div class="row">
-  <div class="col-lg-12">
-    <nav>
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item active">Dashboard</li>
-      </ol>
-    </nav>
-    <div class="card mb-3">
-      <h4 class="card-header">Current Trip</h4>
-      <div class="card-body">
-        No trips.
-      </div>
+<div class="card mb-3">
+  <h4 class="card-header">Current Trip</h4>
+  <div *ngIf="currentTrips.length > 0; then thenBlock; else elseBlock;"></div>
+  <ng-template #thenBlock>
+    <div class="card-body">
+      <ul class="list-unstyled">
+        <li class="media mb-3" *ngFor="let trip of currentTrips">
+          <img
+            class="mr-3 rounded-circle"
+            [src]="trip.driver.photo"
+            width="80"
+            height="80"
+          >
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">{{ trip.driver.username }}</h5>
+            {{ trip.pick_up_address }} to {{ trip.drop_off_address }}<br>
+            {{ trip.status }}
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="card mb-3">
-      <h4 class="card-header">Recent Trips</h4>
-      <div class="card-body">
-        No trips.
-      </div>
+  </ng-template>
+  <ng-template #elseBlock>
+    <div class="card-body text-center">
+      No trips.
     </div>
-  </div>
+  </ng-template>
+</div>
+<div class="card mb-3">
+  <h4 class="card-header">Recent Trips</h4>
+  <div *ngIf="completedTrips.length > 0; then thenBlock; else elseBlock;"></div>
+  <ng-template #thenBlock>
+    <div class="card-body">
+      <ul class="list-unstyled">
+        <li class="media mb-3" *ngFor="let trip of completedTrips">
+          <img
+            class="mr-3 rounded-circle"
+            [src]="trip.driver.photo"
+            width="80"
+            height="80"
+          >
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">{{ trip.driver.username }}</h5>
+            {{ trip.pick_up_address }} to {{ trip.drop_off_address }}<br>
+            {{ trip.status }}
+          </div>
+        </li>
+      </ul>
+    </div>
+  </ng-template>
+  <ng-template #elseBlock>
+    <div class="card-body text-center">
+      No trips.
+    </div>
+  </ng-template>
 </div>
