--- a/taxi-ui/src/app/components/rider/rider.component.html
+++ b/taxi-ui/src/app/components/rider/rider.component.html
@@ -1,5 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand logo" [routerLink]="['/']">Taxi</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['request']">Request a trip</a>
+      </li>
+    </ul>
+  </div>
 </nav>
 <div class="container pt-3">
   <router-outlet></router-outlet>
