--- a/taxi-ui/src/app/components/rider-dashboard/rider-dashboard.component.html
+++ b/taxi-ui/src/app/components/rider-dashboard/rider-dashboard.component.html
@@ -4,7 +4,7 @@
   <ng-template #thenBlock>
     <div class="card-body">
       <ul class="list-unstyled">
-        <li class="media mb-3" *ngFor="let trip of currentTrips">
+        <li class="media mb-3" *ngFor="let trip of currentTrips" [routerLink]="['.', trip.nk]">
           <img
             class="mr-3 rounded-circle"
             [src]="trip.driver.photo"
@@ -32,7 +32,7 @@
   <ng-template #thenBlock>
     <div class="card-body">
       <ul class="list-unstyled">
-        <li class="media mb-3" *ngFor="let trip of completedTrips">
+        <li class="media mb-3" *ngFor="let trip of completedTrips" [routerLink]="['.', trip.nk]">
           <img
             class="mr-3 rounded-circle"
             [src]="trip.driver.photo"
